Rajout identifiants connexion

--- a/views/connexion.ejs
+++ b/views/connexion.ejs
@@ -20,6 +20,18 @@
                 </div>
             <% } %>
 
+            <div class="card mb-5" style="width: 28vw;">
+                <div class="card-body">
+                  <h5 class="card-title mb-3">Voici les identifiants pour se connecter :</h5>
+                    <p class="card-text">
+                        <span class="text-decoration-underline">Email :</span> castres-au-tresor@yopmail.com<br>
+                        <span class="text-decoration-underline">Mot de passe :</span> Jeveuxvoirlesite2024!
+                    </p>
+
+                    <p class="fst-italic" style="text-align: justify;">Pour des raisons de sécurité, vous ne pourrez pas modifier et supprimer les lieux existants. Par contre, vous pourrez ajouter et consulter de nouveaux lieux.</p>
+                </div>
+            </div>
+
             <form action="" method="post" id="formConnexion">
                 <div class="row g-3 align-items-center mb-3">
                     <div class="col-auto">
