Changement URL vers images

--- a/views/lieux.ejs
+++ b/views/lieux.ejs
@@ -63,7 +63,7 @@
             <div class="card-group">
                 <% lieux.forEach(function(lieu) { %>
                     <div class="card" style="width: 18rem;">
-                        <img src="https://webmmi.iut-tlse3.fr/~clc4232a/S5/SAE501/<%= lieu.imageUrl %>" class="card-img-top imageLieu" alt="<%= lieu.nomLieu %>">
+                        <img src="https://aiolah-vaiti.fr/castres-au-tresor/images/<%= lieu.imageUrl %>" class="card-img-top imageLieu" alt="<%= lieu.nomLieu %>">
                         <div class="card-body">
                             <h5 class="card-title"><%= lieu.nomLieu %></h5>
                             <p class="card-text"><%= lieu.descriptionMystere %></p>
